fix css bug with align watch

--- a/src/app/components/StopWatch/StopWatch.scss
+++ b/src/app/components/StopWatch/StopWatch.scss
@@ -1,7 +1,7 @@
 .Stop-watch {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 30%;
   gap: 3rem;
